# graph-optimization

./: .gitignore  LICENSE  LNS.py  LNS_modifications.py  data.py  environment.yml  exploration.py  graph_types.py  greedy.py  main.py  mip.py  modification.py  objective.py  pyproject.toml  readme.md  requirements.txt  router.py  run_and_validate_osdpm.py  run_lns.py  tree.py  tree_search.py  utility.py
data/train/: README.md
data/train/maps/: osdpm_map.gpkg  osdpm_segment_1.gpkg  osdpm_segment_2.gpkg  osdpm_segment_3.gpkg  osdpm_segment_5.gpkg
data/train/routes/osdpm_0_1/: foil_route.gpkg  foil_route.json  route_start_end.csv
data/train/routes/osdpm_0_2/: foil_route.json
data/train/routes/osdpm_0_3/: foil_route.gpkg  foil_route.json  metadata.json  route_start_end.csv
data/train/routes/osdpm_0_4/: foil_route.json  metadata.json
data/train/routes/osdpm_0_5/: foil_route.gpkg  foil_route.json
data/train/routes/osdpm_1_1/: foil_route.gpkg  foil_route.json  metadata.json  route_start_end.csv
data/train/routes/osdpm_1_2/: foil_route.gpkg  foil_route.json  route_start_end.csv
data/train/routes/osdpm_1_3/: foil_route.gpkg  foil_route.json  route_start_end.csv
data/train/routes/osdpm_1_4/: foil_route.gpkg  foil_route.json  route_start_end.csv
data/train/routes/osdpm_1_5/: foil_route.gpkg  (+3 more)
experiment_results/: readme.md  results.csv
text_report/: ijcai25.bib  ijcai25.tex
tree_search/: exploration.py  greedy.py  modification.py  tree_search.py  tree_search_runner.py
validation/: dataparser.py  graph_op.py  helper.py  metrics.py  router.py  validator.py
(+63 files in other folders)
